--- a/projects/web/src/app/routes/passport/login/login.component.html
+++ b/projects/web/src/app/routes/passport/login/login.component.html
@@ -5,7 +5,7 @@
       <nz-form-item>
         <nz-form-control>
           <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-user">
-            <input nz-input formControlName="userName" placeholder="admin" btAutofocus>
+            <input mtAutofocus nz-input formControlName="userName" placeholder="admin" btAutofocus>
           </nz-input-group>
           <nz-form-explain *ngIf="userName.dirty && userName.errors">请输入账户名且至少三个字符！</nz-form-explain>
         </nz-form-control>
